--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -1,9 +1,3 @@
-$blue: #6495ed;
-$white: #fff;
-$red: #f00;
-
-.route1 {
-  background-color: $blue;
-  color: $white;
-  text-shadow: 2px 2px 5px $red;
-}
+@import './base';
+@import './variables';
+@import './components/home';
