--- a/frontend/src/styles/components/home.scss
+++ b/frontend/src/styles/components/home.scss
@@ -20,10 +20,14 @@
     background-color: $main-color;
     border: 2px solid $border-btn;
     border-radius: 10px;
+    color: $white;
     display: block;
+    font-size: 18px;
+    font-weight: bold;
     height: 80px;
     margin: auto;
     margin-top: 25px;
+    text-transform: uppercase;
     outline: none;
     width: 350px;
 
@@ -33,6 +37,7 @@
     &:active:hover {
       background-color: $main-hover-color;
       border: 2px solid $border-btn;
+      color: $white;
       outline: none;
     }
   }
