--- a/frontend/src/styles/components/register.scss
+++ b/frontend/src/styles/components/register.scss
@@ -41,6 +41,7 @@
   &:active:hover {
     background-color: $main-hover-color;
     border: 2px solid $border-btn;
+    color: $white;
     outline: none;
   }
 }
