added function for setting min height to user content block;

--- a/frontend/src/styles/components/home.scss
+++ b/frontend/src/styles/components/home.scss
@@ -4,6 +4,12 @@
   padding-bottom: 20px;
 }
 
+.article-main-content {
+  background-color: $white;
+  border-radius: 35px;
+  padding-top: 25px;
+}
+
 .article-home {
   background-color: $white;
   border-radius: 35px;
